Se comenzo con graficos de resultados de encuesta.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -204,6 +204,12 @@
                             Listar
                         </a>
                     </div>
+                    <div class="submenuOpcion">
+                        <a href="../Encuesta/ResultadoEncuesta.xhtml?id=281" class="SubmenuLink">
+                            <img src="../Resources/Images/listar.png" width="50" height="50" alt="edit"/>
+                            138
+                        </a>
+                    </div>
                 </div> 
                 
                 <div class="navDivider"></div>
