--- a/ProyectoTISJ-war/web/Estudiante/EstudianteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Estudiante/EstudianteMenu.xhtml
@@ -49,7 +49,7 @@
             <div class="navDivider"></div>
             
             <h:form rendered="#{login.usuarioLogueado}">
-                <h:commandLink type="submit" action="#{login.logout()}">
+                <h:commandLink action="#{login.logout()}">
                     <div class="navOptMenu">
                         Salir
                     </div>
