Se agrego redireccion al index luego de 10 segundos de la pantalla de error.

--- a/ProyectoTISJ-war/web/Error/Error404.xhtml
+++ b/ProyectoTISJ-war/web/Error/Error404.xhtml
@@ -19,6 +19,7 @@
                     La pagina a la que intenta acceder no está disponible.
                 </div>
             </div>
+        <meta http-equiv="refresh" content="10;url=#{facesContext.externalContext.requestContextPath}/Views/index.xhtml"></meta>
     </h:body>
 </html>
 
