Se agrego contrato de docente a registrar curso. Se agregaron las comprobaciones de datos y la redireccion al listado de curso luego de registrar el curso (javascript).

--- a/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
+++ b/ProyectoTISJ-war/web/Curso/InformacionCurso.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="page_content">
         <div class="cabecera" >
             <div class="titulo" >
-                Informacion del Curso #{informacionCurso.curso.asignaturaCurso.nombreAsignatura} del semestre #{informacionCurso.curso.semestreCurso} dicatado en el año #{informacionCurso.curso.anioCurso}
+                Informacion del Curso #{informacionCurso.curso.asignaturaCurso.nombreAsignatura} del semestre #{informacionCurso.curso.semestreCurso} dictado en el año #{informacionCurso.curso.anioCurso}
             </div>
         </div>
         <Script>
