Se agrego pagina de informacion de docente. Se comenzo con desarrollo de pagina de editar docente.

--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -11,7 +11,9 @@
                 </a>
             </div>
             <div class="navLabel">
+                <a href="../Docente/EditarDocente.xhtml?id=#{login.idUsuarioLogueado}" >
                 <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
+                </a>
             </div>
             <a href="../loginRol.xhtml">
             <div class="navLabel">
