Se desarrollo caso de uso de editar perfil para todos los roles. Se modificaron los controladores para realizar los cambios en todos los roles.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -14,7 +14,9 @@
                         </a> 
                     </div>
                     <div class="navLabel">
+                        <a href="../Usuario/EditarPerfil.xhtml?id=#{login.idUsuarioLogueado}&amp;Rol=#{login.rolSeleccionado}" >
                         <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
+                        </a>
                     </div>
                     <a href="../loginRol.xhtml">
                         <div class="navLabel">
