--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -35,7 +35,7 @@
                         <div class="ListItem" >
                             <div class="item" >
                                 <div class="ImagenItem">
-                                    <img src="#{usuario.imagenURL}" height="100%" width="100%"/>
+                                    <img src="#{usuario.imagenUsuario}" height="100%" width="100%"/>
                                 </div>
                             </div>
                             <div class="item">
