--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -6,12 +6,12 @@
     <div class="nav"> 
         <div class="navHeader">
             <div class="navBadge">
-                <a href="../Usuario/EditarPerfil.xhtml" >
+                <a href="../Views/index.xhtml" >
                     <h:graphicImage url="#{usuarioLogueadoBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
                 </a>
             </div>
             <div class="navLabel">
-                <a href="../Docente/EditarDocente.xhtml?id=#{login.idUsuarioLogueado}" >
+                <a href="../Usuario/EditarPerfil.xhtml?id=#{login.idUsuarioLogueado}&amp;Rol=#{login.rolSeleccionado}" >
                 <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
                 </a>
             </div>
