--- a/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
@@ -7,7 +7,7 @@
         <div class="navHeader">
             <div class="navBadge">
                 <a href="../Views/index.xhtml" >
-                    <h:graphicImage url="#{usuarioLogueadoBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
+                    <img src="#{usuarioLogueadoBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
                 </a>
             </div>
             <div class="navLabel">
