--- a/ProyectoTISJ-war/web/Estudiante/InformacionEstudiante.xhtml
+++ b/ProyectoTISJ-war/web/Estudiante/InformacionEstudiante.xhtml
@@ -100,7 +100,7 @@
                 <h2> Formulario de Inscripcion</h2>
                 
                 <!--para cambiar por formulario de inscripcion-->
-                <div style="width: 1000px; height: 1000px; background-image: url(#{informacionEstudiante.estudiante.imagenUsuario}); background-size: contain;"></div>
+                <div style="width: 1000px; height: 1000px; background-image: url(#{informacionEstudiante.estudiante.formInscripcion}); background-size: contain;"></div>
                 
             </div>
         </div>
