--- a/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrativo/AdministrativoMenu.xhtml
@@ -1,7 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     
     <div class="nav"> 
         <div class="navHeader">
@@ -12,12 +13,21 @@
             </div>
             <div class="navLabel">
                 <a href="../Usuario/EditarPerfil.xhtml?id=#{login.idUsuarioLogueado}&amp;Rol=#{login.rolSeleccionado}" >
-                <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
+                    <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
                 </a>
             </div>
-            <div class="navLabel">
-                (Administrativo)
-            </div>
+            <c:if test="#{login.roles.size() gt 1}" >
+            <a href="../loginRol.xhtml" >
+                <div class="navLabel">
+                    (Administrativo)
+                </div>
+            </a>
+            </c:if>
+            <c:if test="#{login.roles.size() le 1}" >
+                <div class="navLabel">
+                    (Administrativo)
+                </div>
+            </c:if>  
         </div>
         <div class="navDivider"></div>
         <a href="../Usuario/ListarUsuarios.xhtml?rol=Docente">
