Se modifico indicador de carga. Se agrego icono para pagina.

--- a/ProyectoTISJ-war/web/login.xhtml
+++ b/ProyectoTISJ-war/web/login.xhtml
@@ -6,6 +6,7 @@
     <h:head>
         <link rel="stylesheet" href="./Resources/CSS/login.css" />
         <link rel="stylesheet" href="./Resources/CSS/Mensajes.css" />
+        <link rel="shortcut icon" type="image/x-icon" href="#{facesContext.externalContext.requestContextPath}/Resources/Images/tecnoinf_icon.ico"/>
         <script src="Resources/Scripts/jquery-1.11.3.min.js"></script>
         <title>Login</title>      
     </h:head>
