--- a/ProyectoTISJ-war/web/Error/Error401.xhtml
+++ b/ProyectoTISJ-war/web/Error/Error401.xhtml
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/Resources/CSS/login.css" />
         <link rel="stylesheet" href="#{facesContext.externalContext.requestContextPath}/Resources/CSS/Mensajes.css" />
         <script src="#{facesContext.externalContext.requestContextPath}/Resources/Scripts/jquery-1.11.3.min.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="#{facesContext.externalContext.requestContextPath}/Resources/Images/error_icon.ico"/>
         <title>401</title>      
     </h:head>
     <h:body>                 
