Se corrigio error en menu administrador (error de tipeo en link administrativo). Se corrigio error en cambio de rol (no se cambiaba el usuario en la sesion). Se corrigieron redireccion y mensajes (se utiliza render response y se quito redireccion a traves de javascript).

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -71,7 +71,7 @@
                     </div>
                     
                     <div class="submenuOpcion">
-                        <a href="../Usuario/RegistrarUsuario.xhtml?rol=Administrtivo" class="SubmenuLink">
+                        <a href="../Usuario/RegistrarUsuario.xhtml?rol=Administrativo" class="SubmenuLink">
                             <img src="../Resources/Images/agregar.png" width="50" height="50" alt="edit"/>
                             Nuevo
                         </a>
