--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -147,11 +147,9 @@
                         </div>
                     </div>
                 </h:panelGroup>
-                <h:inputText id="regExito" value="#{registrarUsuarioBean.correcto}" style="display:none;" />
-                <h:inputText id="regRol" value="#{registrarUsuarioBean.rol}" style="display:none;"/>
                 <div class="menuOpcion" >
                     <h:commandButton class="boton siguiente" value="Registrar" disabled="false">
-                        <f:ajax execute="@form" event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="regExito" onevent="RedirigirUsuarios"/>
+                        <f:ajax execute="@form" event="click" listener="#{registrarUsuarioBean.registrarUsuarioInterfaz()}" render="@form" onevent="indicador" />
                     </h:commandButton>
                     <h:commandButton class="boton" value="Reset" type="reset"/>
                 </div>                    
