--- a/ProyectoTISJ-war/web/Usuario/EditarPerfil.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/EditarPerfil.xhtml
@@ -139,11 +139,18 @@
                             </div>
                         </h:panelGroup>
                     </h:panelGroup>
+                    <h:message for="btnEliminar" class="error"/>
                     <div class="menuOpcion" >
                         <h:commandButton class="boton siguiente" value="Guardar" disabled="false" >
                             <f:ajax execute="@form" listener="#{editarPerfil.guardarDatos()}" render="@form" onevent="indicador" />
                         </h:commandButton>
-                    </div>                    
+                        <h:commandButton class="boton siguiente" id="btnEliminar" value="Eliminar" disabled="false" 
+                                         rendered="#{login.rolSeleccionado == 'Administrador'and 
+                                                     login.idUsuarioLogueado != editarPerfil.idUsuario
+                                                     and editarPerfil.rol == 'Estudiante'}">
+                            <f:ajax execute="@form" listener="#{editarPerfil.eliminarUsuario}" render="@form" onevent="indicador" />
+                        </h:commandButton>
+                    </div>
                 </h:form>
             </div> 
         </f:view>
